--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.34.2"
 python-dotenv = "^1.1.0"
 pydantic = "^2.11.3"
 requests = "^2.32.3"
+streamlit = "^1.44.1"
 
 
 [build-system]
